[gd_scene load_steps=13 format=2]

[ext_resource path="res://Whig.gd" type="Script" id=1]
[ext_resource path="res://Player/Weapons/whip-me.png" type="Texture" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Whig_Anchor/Sprite_Right:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Whig_Anchor/Sprite_Right:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Whig_Anchor/Sprite_Right:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Whig_Anchor/Sprite_Right:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Whig_Anchor/Sprite_Right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Whig-idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Whig_Anchor/Sprite_Right:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=6]
resource_name = "Whig-whip"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Whig_Anchor/Sprite_Right:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Whig_Anchor/Sprite_Right:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Whig_Anchor/Sprite_Right:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Whig_Anchor/Sprite_Right:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Whig_Anchor/Sprite_Right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Whig-idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Whig-whip"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Whig-idle/node = SubResource( 7 )
states/Whig-idle/position = Vector2( 267.8, 99.7642 )
states/Whig-whip/node = SubResource( 8 )
states/Whig-whip/position = Vector2( 477.4, 99.7645 )
transitions = [ "Whig-idle", "Whig-whip", SubResource( 9 ), "Whig-whip", "Whig-idle", SubResource( 13 ) ]
start_node = "Whig-idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 36, 5 )

[node name="Whig" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Whig-idle = SubResource( 5 )
anims/Whig-whip = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 12 )

[node name="Whig_Anchor" type="Node2D" parent="."]

[node name="Sprite_Right" type="Sprite" parent="Whig_Anchor"]
self_modulate = Color( 0.960784, 0.721569, 0.101961, 1 )
position = Vector2( 8, -1 )
scale = Vector2( 2, 1 )
z_index = 6
texture = ExtResource( 2 )
offset = Vector2( 16, 0 )
hframes = 4

[node name="Area2D" type="Area2D" parent="Whig_Anchor"]
collision_layer = 8
collision_mask = 8
space_override = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whig_Anchor/Area2D"]
position = Vector2( 36, 0 )
shape = SubResource( 14 )

[connection signal="body_entered" from="Whig_Anchor/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Whig_Anchor/Area2D" to="." method="_on_Area2D_body_exited"]
